<resources>
    <string name="app_name">Gallery</string>
    <string name="recommend">Charts</string>
    <string name="channel">Channel</string>
    <string name="episodesvarietylatest">Latest</string>
    <string name="episodesvarietyprev">Prev</string>
    <string name="episodesvarietynext">Next</string>
    <string name="episodesvarietyearliest">Earliest</string>
    <string name="video_loading">loading..</string>
    <string name="search">Search</string>
    <string name="download">Download</string>
    <string name="online_favorite">Favorite</string>
    <string name="selectdownload">select download</string>
    <string name="selectedcontent">selected %1$s items %2$sMB</string>
    <string name="selecteddownloadtext">%1$d projects have been added to the download list</string>
    <string name="noavailablenetwork">no network</string>
    <string name="confirm">Confirm</string>
    <string name="introductiontexttitle">Introduction</string>
    <string name="hasFavorited">Favorited</string>
    <string name="addToFavorite">favorited</string>
    <string name="deleteFromFavorite">cancel favorite</string>
    <string name="nosearchresult">no search result</string>
    <string name="servertimeout">server time out</string>
    <string name="videolist">video list</string>
    <string name="menu_delete">delete</string>
    <string name="servernoreturncontent">server no return content</string>
    <string name="only_use_wifi">only use wlan</string>
    <string name="no_wifi_connect_title">no wlan connect</string>
    <string name="no_wifi_connect_msg">the current setting is use wlan only</string>
    <string name="use_mobile_play">use mobile network play？</string>
    <string name="hasDownload">Downloaded</string>
    <string name="cannot_wifi_connect_title">cannot wlan connect</string>
    <string name="use_mobile_download">use mobile network download？</string>
    <string name="loading">Loading…</string>
    <string name="camera_error_title">Camera error</string>
    <string name="cannot_connect_camera">"Can't connect to the camera"</string>
    <string name="camera_disabled">Camera has been disabled because of security policies</string>
    <string name="camera_label">Camera</string>
    <string name="video_camera_label">Camcorder</string>
    <string name="gallery_camera_bucket_name">Camera pictures</string>
    <string name="gallery_camera_videos_bucket_name">Camera videos</string>
    <string name="wait">Please wait…</string>
    <string name="no_storage">Mount USB storage before using the camera</string>
    <string name="not_enough_space">Your USB storage is full</string>
    <string name="preparing_sd">Preparing USB storage…</string>
    <string name="access_sd_fail">"Couldn't access USB storage"</string>
    <string name="confirm_restore_message">Do you want to restore camera default settings?</string>
    <string name="review_play">Play</string>
    <string name="review_cancel">CANCEL</string>
    <string name="review_ok">DONE</string>
    <string name="review_retake">RETAKE</string>
    <string name="camera_gallery_photos_text">Gallery</string>
    <string name="time_lapse_title">Time lapse recording</string>
    <string name="pref_camera_id_title">Choose camera</string>
    <string name="pref_camera_id_default">0</string>
    <string name="pref_camera_id_entry_back">Back</string>
    <string name="pref_camera_id_entry_front">Front</string>
    <string name="pref_camera_recordlocation_title">Location</string>
    <string name="pref_camera_recordwdr_title">WDR</string>
    <string name="pref_camera_recordgesture_title">Gesture</string>
    <string name="pref_camera_recordlocation_default">none</string>
    <string name="pref_camera_recordwdr_default">wdr-on</string>
    <string name="pref_camera_recordgesture_default">gesture-off</string>
    <string name="pref_camera_recordlocation_entry_off">Off</string>
    <string name="pref_camera_recordlocation_entry_on">On</string>
    <string name="pref_camera_recordwdr_entry_off">Off</string>
    <string name="pref_camera_recordwdr_entry_on">On</string>
    <string name="pref_camera_recordgesture_entry_off">Off</string>
    <string name="pref_camera_recordgesture_entry_on">On</string>
    <string name="pref_video_quality_title">Video size</string>
    <string name="pref_video_quality_default">5</string>
    <string name="pref_video_quality_entry_1080p">1080P</string>
    <string name="pref_video_quality_entry_720p">720P</string>
    <string name="pref_video_quality_entry_480p">480P</string>
    <string name="pref_video_time_lapse_frame_interval_title">Time lapse interval</string>
    <string name="pref_video_time_lapse_frame_interval_default">0</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1000">1s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_1500">1.5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2000">2s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_2500">2.5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_3000">3s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_5000">5s</string>
    <string name="pref_video_time_lapse_frame_interval_entry_10000">10s</string>
    <string name="pref_camera_settings_category">Others</string>
    <string name="pref_camcorder_settings_category">Camcorder settings</string>
    <string name="pref_camera_picturesize_title">Resolution</string>
    <string name="pref_camera_picturesize_entry_3264x2448">8M pixels</string>
    <string name="pref_camera_picturesize_entry_2560x1920">5M pixels</string>
    <string name="pref_camera_picturesize_entry_2048x1536">3M pixels</string>
    <string name="pref_camera_picturesize_entry_1600x1200">2M pixels</string>
    <string name="pref_camera_picturesize_entry_1280x960">1.3M pixels</string>
    <string name="pref_camera_picturesize_entry_1024x768">1M pixels</string>
    <string name="pref_camera_picturesize_entry_640x480">VGA</string>
    <string name="pref_camera_picturesize_entry_320x240">QVGA</string>
    <string name="pref_camera_focusmode_title">Focus mode</string>
    <string name="pref_camera_focusmode_entry_auto">Auto</string>
    <string name="pref_camera_focusmode_entry_infinity">Infinity</string>
    <string name="pref_camera_focusmode_entry_macro">Macro</string>
    <string name="pref_camera_flashmode_default">auto</string>
    <string name="pref_camera_flashmode_no_flash">no_flash</string>
    <string name="pref_camera_flashmode_title">Flash mode</string>
    <string name="pref_camera_flashmode_entry_auto">Auto</string>
    <string name="pref_camera_flashmode_entry_on">On</string>
    <string name="pref_camera_flashmode_entry_off">Off</string>
    <string name="pref_camera_video_flashmode_default">light-off</string>
    <string name="pref_camera_whitebalance_default">auto</string>
    <string name="pref_camera_whitebalance_title">White balance</string>
    <string name="pref_camera_whitebalance_entry_auto">Auto</string>
    <string name="pref_camera_whitebalance_entry_incandescent">Incandescent</string>
    <string name="pref_camera_whitebalance_entry_daylight">Daylight</string>
    <string name="pref_camera_whitebalance_entry_fluorescent">Fluorescent</string>
    <string name="pref_camera_whitebalance_entry_cloudy">Cloudy</string>
    <string name="pref_camera_scenemode_default">auto</string>
    <string name="pref_camera_iso_default">auto</string>
    <string name="pref_camera_capture_mode_default">capture-normal</string>
    <string name="pref_camera_scenemode_title">Scene</string>
    <string name="pref_camera_iso_title">ISO</string>
    <string name="pref_camera_capture_mode_title">Mode</string>
    <string name="pref_camera_scenemode_entry_auto">Auto</string>
    <string name="pref_camera_scenemode_entry_action">Action</string>
    <string name="pref_camera_scenemode_entry_night">Night</string>
    <string name="pref_camera_scenemode_entry_sunset">Sunset</string>
    <string name="pref_camera_scenemode_entry_party">Party</string>
    <string name="not_selectable_in_scene_mode">Not selectable in scene mode</string>
    <string name="pref_restore_title">Camera settings</string>
    <string name="pref_restore_detail">Restore defaults</string>
    <string name="pref_exposure_title">Exposure</string>
    <string name="pref_exposure_default">0</string>
    <string name="dialog_ok">OK</string>
    <string name="spaceIsLow_content">Your USB storage is running out of space Change the quality setting or delete some images or other files</string>
    <string name="image_file_name_format">"'P'yMMdd-HHmmss"</string>
    <string name="video_file_name_format">"'V'yMMdd-HHmmss"</string>
    <string name="pano_file_name_format">"'PANO'_yyyyMMdd_HHmmss"</string>
    <string name="video_reach_size_limit">Size limit reached</string>
    <string name="setting_increment">></string>
    <string name="setting_decrement">&lt;</string>
    <string name="save">SAVE</string>
    <string name="crop">Crop</string>
    <string name="doodle">Doodle</string>
    <string name="duotone">Duo-tone</string>
    <string name="flip">Flip</string>
    <string name="grayscale">B&amp;W</string>
    <string name="negative">Negative</string>
    <string name="rotate">Rotate</string>
    <string name="saturation">Saturation</string>
    <string name="sepia">Sepia</string>
    <string name="straighten">Straighten</string>
    <string name="temperature">Temperature</string>
    <string name="tint">Tint</string>
    <string name="crop_tooltip">Drag markers to crop photo</string>
    <string name="doodle_tooltip">Draw on photo to doodle</string>
    <string name="flip_tooltip">Drag photo to flip it</string>
    <string name="rotate_tooltip">Drag photo to rotate it</string>
    <string name="straighten_tooltip">Drag photo to straighten it</string>
    <string name="SaturationFilter">CommonEffectSaturationFilter</string>
    <string name="ColorTemperatureFilter">CommonEffectColorTemperatureFilter</string>
    <string name="CropFilter">CropFilter</string>
    <string name="StraightenFilter">StraightenFilter</string>
    <string name="RotateFilter">RotateFilter</string>
    <string name="FlipFilter">FlipFilter</string>
    <string name="BlackAndWhiteFilter">BlackAndWhiteFilter</string>
    <string name="PostcardFilter">PostcardFilter</string>
    <string name="TimeFilter">TimeFilter</string>
    <string name="ReminisenceFilter">ReminisenceFilter</string>
    <string name="LightColorFilter">LightColorFilter</string>
    <string name="WarmFilter">WarmFilter</string>
    <string name="GrassFilter">GrassFilter</string>
    <string name="CountryFilter">CountryFilter</string>
    <string name="ColdNostalgiaFilter">ColdNostalgiaFilter</string>
    <string name="LomoFilter">LomoFilter</string>
    <string name="BrightnessFilter">CommonEffectBrightnessFilter</string>
    <string name="ContrastFilter">CommonEffectContrastFilter</string>
    <string name="effect_apply">Apply</string>
    <string name="doodle_paint_setting">Brush</string>
    <string name="doodle_paint_size">Size</string>
    <string name="doodle_paint_alpha">Alpha</string>
    <string name="blackandwhite">B&amp;W</string>
    <string name="postcard">Postcard</string>
    <string name="thetime">Nostalgia</string>
    <string name="reminisence">Memories</string>
    <string name="lightcolor">Color Flare</string>
    <string name="warmfilter">Warm</string>
    <string name="grassfilter">Grass</string>
    <string name="countryfilter">Country</string>
    <string name="coldnostalgiafilter">Moonlight</string>
    <string name="newlomofilter">Lomo</string>
    <string name="brightnessfilter">Brightness</string>
    <string name="contrastfilter">Contrast</string>
    <string name="edit">Edit</string>
    <string name="menu_share_title">Share</string>
    <string name="menu_email_title">Share by email</string>
    <string name="menu_delete_title">Delete</string>
</resources>