<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:paddingLeft="@dimen/effects_container_padding" android:paddingRight="@dimen/effects_container_padding" android:layout_width="wrap_content" android:layout_height="82.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <com.android.gallery3d.photoeditor.actions.CropAction android:tag="@string/crop_tooltip" android:contentDescription="@string/CropFilter" style="@style/Effect">
        <ImageButton android:id="@id/effect_button" android:layout_marginTop="-21.0dip" android:src="@drawable/photoeditor_effect_crop" style="@style/EffectIconExtra" />
        <TextView android:id="@id/effect_label" android:layout_width="67.0dip" android:layout_marginTop="-21.0dip" android:text="@string/crop" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.CropAction>
    <com.android.gallery3d.photoeditor.actions.StraightenAction android:tag="@string/straighten_tooltip" android:contentDescription="@string/StraightenFilter" style="@style/Effect">
        <ImageButton android:id="@id/effect_button" android:layout_marginTop="-21.0dip" android:src="@drawable/photoeditor_effect_straighten" style="@style/EffectIconExtra" />
        <TextView android:id="@id/effect_label" android:layout_width="67.0dip" android:layout_marginTop="-21.0dip" android:text="@string/straighten" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.StraightenAction>
    <com.android.gallery3d.photoeditor.actions.RotateAction android:tag="@string/rotate_tooltip" android:contentDescription="@string/RotateFilter" style="@style/Effect">
        <ImageButton android:id="@id/effect_button" android:layout_marginTop="-21.0dip" android:src="@drawable/photoeditor_effect_rotate" style="@style/EffectIconExtra" />
        <TextView android:id="@id/effect_label" android:layout_width="67.0dip" android:layout_marginTop="-21.0dip" android:text="@string/rotate" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.RotateAction>
    <com.android.gallery3d.photoeditor.actions.FlipAction android:tag="@string/flip_tooltip" android:contentDescription="@string/FlipFilter" style="@style/Effect">
        <ImageButton android:id="@id/effect_button" android:layout_marginTop="-21.0dip" android:src="@drawable/photoeditor_effect_flip" style="@style/EffectIconExtra" />
        <TextView android:id="@id/effect_label" android:layout_width="67.0dip" android:layout_marginTop="-21.0dip" android:text="@string/flip" style="@style/EffectLabel" />
    </com.android.gallery3d.photoeditor.actions.FlipAction>
</LinearLayout>
