<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/chanelprogramdetail_episodes_variety" android:background="@color/content_background" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/channeldetailprogram_variety_title_size" android:textColor="@color/channeldetailprogram_variety_title_color" android:gravity="bottom" android:id="@id/chanelprogramdetail_episodes_variety_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginRight="10.0dip" android:layout_marginBottom="3.0dip" />
    <ImageView android:gravity="fill_horizontal" android:id="@id/chanelprogramdetail_episodes_variety_diverImage" android:layout_width="fill_parent" android:layout_height="1.0dip" android:src="@drawable/channeldetailprogram_diver_drawable" android:scaleType="fitXY" />
    <ListView android:id="@id/chanelprogramdetail_episodes_variety_listview" android:layout_width="fill_parent" android:layout_height="fill_parent" android:divider="@drawable/channeldetailprogram_diver_drawable" android:dividerHeight="0.5px" />
    <LinearLayout android:gravity="left" android:orientation="horizontal" android:id="@id/chanelprogramdetail_episodes_variety_operation" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="10.0dip" android:layout_marginTop="12.0dip" android:layout_marginRight="10.0dip">
        <Button android:gravity="center" android:id="@id/episodes_variety_latest" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="76.0dip" android:layout_height="42.5dip" android:layout_marginRight="10.5dip" android:text="@string/episodesvarietylatest" android:singleLine="true" style="@style/Video.Online.Page.Button" />
        <Button android:gravity="center" android:id="@id/episodes_variety_prev" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="76.0dip" android:layout_height="42.5dip" android:layout_marginRight="10.5dip" android:text="@string/episodesvarietyprev" android:singleLine="true" style="@style/Video.Online.Page.Button" />
        <Button android:gravity="center" android:id="@id/episodes_variety_next" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="76.0dip" android:layout_height="42.5dip" android:layout_marginRight="10.5dip" android:text="@string/episodesvarietynext" android:singleLine="true" style="@style/Video.Online.Page.Button" />
        <Button android:gravity="center" android:id="@id/episodes_variety_earliest" android:paddingLeft="3.0dip" android:paddingRight="3.0dip" android:layout_width="76.0dip" android:layout_height="42.5dip" android:text="@string/episodesvarietyearliest" android:singleLine="true" style="@style/Video.Online.Page.Button" />
    </LinearLayout>
</LinearLayout>
