<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/photoeditor_toolbar_background" style="@style/ActionBarInner"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:clipChildren="false" android:clipToPadding="false" android:layout_height="@dimen/photoeditor_actionbar_height" style="@style/ActionBarLinearLayout">
        <com.meizu.widget.GlowImageButton android:id="@id/action_bar_back" android:src="@drawable/photoeditor_ic_tab_back" style="@style/EffectsMenuActionButton" />
        <TextView android:textSize="@dimen/photoeditor_actionbar_title_size" android:textColor="#ff808080" android:layout_gravity="center_vertical" android:id="@id/action_bar_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@android:dimen/action_bar_padding_left_mz" android:text="@string/edit" />
    </LinearLayout>
    <LinearLayout android:visibility="gone" android:layout_alignParentRight="true" style="@style/ActionBarLinearLayout">
        <ImageButton android:id="@id/undo_button" android:src="@drawable/photoeditor_undo" style="@style/ImageActionButton" />
        <ImageButton android:id="@id/redo_button" android:src="@drawable/photoeditor_redo" style="@style/ImageActionButton" />
        <ViewSwitcher android:id="@id/save_share_buttons" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <Button android:id="@id/save_button" android:layout_width="fill_parent" android:text="@string/save" style="@style/TextActionButton" />
            <ImageButton android:id="@id/share_button" android:layout_width="fill_parent" android:src="@drawable/ic_menu_share_holo_light" style="@style/ImageActionButton" />
        </ViewSwitcher>
    </LinearLayout>
    <LinearLayout android:layout_gravity="right" android:id="@id/actionbar_toggles" android:clipChildren="false" android:clipToPadding="false" android:layout_width="wrap_content" android:layout_alignParentRight="true" style="@style/EffectsMenuContainer">
        <com.meizu.widget.GlowImageButton android:id="@id/actionbar_artistic_button" android:src="@drawable/photoeditor_artistic" style="@style/EffectsMenuActionButton" />
        <com.meizu.widget.GlowImageButton android:id="@id/actionbar_exposure_button" android:src="@drawable/photoeditor_exposure" style="@style/EffectsMenuActionButton" />
        <ImageView android:layout_gravity="center_vertical" android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/list_attachment_dotted_line" />
        <Button android:textColor="#ff808080" android:id="@id/actionbar_apply_action_button" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/effect_apply" android:drawableLeft="@drawable/ic_tab_done_holo" style="@style/TextActionButton" />
        <com.meizu.widget.GlowLinearLayout android:enabled="false" android:id="@id/actionbar_save_action_button_layout" android:clickable="true" android:addStatesFromChildren="true" android:layout_width="wrap_content" android:layout_height="fill_parent">
            <Button android:enabled="false" android:textColor="@color/photoeditor_savebutton_color" android:gravity="center" android:id="@id/actionbar_save_action_button" android:background="@null" android:paddingLeft="@dimen/action_button_padding_horizontal" android:paddingRight="@dimen/action_button_padding_horizontal" android:clickable="false" android:layout_width="wrap_content" android:layout_height="fill_parent" android:text="@string/save" android:drawableLeft="@drawable/photoeditor_save_button_icon" />
        </com.meizu.widget.GlowLinearLayout>
    </LinearLayout>
</RelativeLayout>
