<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/doodle_window_background" android:layout_width="@dimen/paint_dialog_w" android:layout_height="@dimen/paint_dialog_h"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/paint_dialog_titlesize" android:textColor="@color/photoeditor_text_blue" android:gravity="center" android:layout_gravity="center_horizontal" android:id="@id/doodle_paint_title" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/paint_dialog_title_margintop" android:text="@string/doodle_paint_setting" />
    <FrameLayout android:layout_width="fill_parent" android:layout_height="wrap_content">
        <com.android.gallery3d.photoeditor.actions.PaintPathPreview android:layout_gravity="center_horizontal" android:id="@id/doodle_paint_preview" android:layout_width="@dimen/paint_path_preview_width" android:layout_height="@dimen/paint_path_preview_height" android:layout_marginTop="@dimen/paint_path_preview_margintop" />
        <ImageView android:layout_gravity="bottom|right|center" android:id="@id/color_picker" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="@dimen/doolde_colorpick_btn_marginright" android:layout_marginBottom="@dimen/doolde_colorpick_btn_marginbottom" android:src="@drawable/photoeditor_btn_color_picker" />
    </FrameLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/paint_dialog_sizelayout_margintop">
        <TextView android:textSize="@dimen/paint_dialog_itemtext_size" android:textColor="@color/photoeditor_text_gray" android:ellipsize="end" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/paint_dialog_sizetext_marginleft" android:layout_marginTop="@dimen/paint_dialog_sizetext_margintop" android:maxWidth="@dimen/paint_dialog_itemtext_maxwidth" android:text="@string/doodle_paint_size" android:singleLine="true" />
        <SeekBar android:id="@id/doodle_panit_size_seekbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/paint_dialog_seekbar_marginright" android:max="20" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="@dimen/paint_dialog_alphalayout_margintop">
        <TextView android:textSize="@dimen/paint_dialog_itemtext_size" android:textColor="@color/photoeditor_text_gray" android:ellipsize="end" android:gravity="left" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="@dimen/paint_dialog_sizetext_marginleft" android:layout_marginTop="@dimen/paint_dialog_sizetext_margintop" android:maxWidth="@dimen/paint_dialog_itemtext_maxwidth" android:text="@string/doodle_paint_alpha" android:singleLine="true" />
        <SeekBar android:id="@id/doodle_panit_alpha_seekbar" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginRight="@dimen/paint_dialog_seekbar_marginright" android:max="205" />
    </LinearLayout>
    <com.android.gallery3d.photoeditor.actions.DoodleColorPen android:id="@id/doodle_colorpen" android:layout_width="@dimen/paint_dialog_colorpalette_w" android:layout_height="@dimen/paint_dialog_colorpalette_h" android:layout_marginLeft="@dimen/paint_dialog_colorpan_marginleft" android:layout_marginTop="@dimen/paint_dialog_colorpan_margintop" android:layout_marginRight="@dimen/paint_dialog_colorpan_marginright" android:layout_marginBottom="@dimen/paint_dialog_colorpan_margintop" />
</LinearLayout>
